--- a/session.html
+++ b/session.html
@@ -10,23 +10,23 @@
 		
 		<link href="./_app/immutable/assets/0.2dd80857.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.91385e78.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.f2ca3238.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.2cd55fa0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.fa4ff221.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.92cde6a6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.0b3707f5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.10cc243b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.fe2ced56.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.3af18b59.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.e1fef2aa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6455130f.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.c01a2c1e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.d5656647.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.1d4bfa90.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.73089128.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.676fafbb.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.c8d03edb.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">   <main class="svelte-1awihg0"><a href="./" class="one-liner svelte-1awihg0" data-svelte-h="svelte-1ry70y4"><i class="gg-chevron-left svelte-1awihg0"></i> Retour</a> <div class="DNA_cont svelte-1awihg0" data-svelte-h="svelte-9yhqwq"><div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div></div>  </main> 
 			
 			<script>
 				{
-					__sveltekit_w07wd9 = {
+					__sveltekit_1u4da3h = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.f2ca3238.js"),
-						import("./_app/immutable/entry/app.fe2ced56.js")
+						import("./_app/immutable/entry/start.fa4ff221.js"),
+						import("./_app/immutable/entry/app.e1fef2aa.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
